[package]
name = "flight"
version = "0.1.0"
authors = [
    "Sumner Evans <jonathanevans@mines.edu>",
    "Sam Sartor <ssartor@mines.edu>",
    "Robbie Merillat <rdmerillat@mines.edu>",
]

[dependencies]
nalgebra = "^0.13.0"
gfx = "^0.16.1"
log = "^0.3.8"
obj = "^0.8.0"
fnv = "^1.0.5"
image = "^0.15.0"
rust-webvr = "^0.8.1"

[dev-dependencies]
approx = "^0.1.1"

[workspace]
members = ["examples/intro"]