[package]
name = "flight-intro"
version = "0.1.0"
authors = [
    "Sumner Evans <jonathanevans@mines.edu>",
    "Sam Sartor <ssartor@mines.edu>",
    "Robbie Merillat <rdmerillat@mines.edu>",
]

[dependencies]
flight = { path = "../.." }
clap = "^2.26.2"
simplelog = "^0.4.2"
glutin = "^0.9.2"
gfx_window_glutin = "^0.17.0"
gfx_device_gl = "^0.14.4"
nalgebra = "*"
gfx = "*"
log = "*"